--- a/sre/templates/register.html
+++ b/sre/templates/register.html
@@ -1,10 +1,146 @@
+<!DOCTYPE html>
+
 <html>
-    <head><title>SRE Register</title></head>
-    <body>
-        <form action='register' enctype="multipart/form-data" method='post'>
-            <input type='file' name='UploadFile'/><br/>
-            <p>userid:</p><input type='text' name='UserId'/><br/>
-            <input type='submit' value='submit'/>
-        </form>
-    </body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>SRE Register</title>
+    <style type='text/css'>
+        #recording audio { display: block; margin-bottom: 10px; }
+    </style>
+    <script src="../static/js/recorder.js"></script>
+    <script src="../static/js/jquery-2.1.1.min.js"></script>
+</head>
+<body>
+    <div>
+        <input id="upload" type='file' name='UploadFile'/><br/>
+        <div style="display:inline">
+            <p style="display:inline">userid:</p>
+            <input id="userid" style="display:inline" type='text' name='UserId'/><br/>
+        </div>
+        <button onclick="submit()">submit</button>
+    </div>
+    <h2>Recordings remain latest audio</h2>
+    <button onclick="startRecording(this);">record</button>
+    <button onclick="stopRecording(this);" disabled>stop</button>
+    <div id="recording"></div>
+    <h2>Log</h2>
+    <pre id="log"></pre>
+    <script>
+        function __log(e, data) {
+            log.innerHTML += "\n" + e + " " + (data || '');
+        }
+
+        var audio_context;
+        var recorder;
+        var record_audio_file = undefined;
+
+        function startUserMedia(stream) {
+            var input = audio_context.createMediaStreamSource(stream);
+            __log('Media stream created.');
+
+            // Uncomment if you want the audio to feedback directly
+            //input.connect(audio_context.destination);
+            //__log('Input connected to audio context destination.');
+
+            recorder = new Recorder(input);
+            __log('Recorder initialised.');
+        }
+
+        function startRecording(button) {
+            recorder && recorder.record();
+            button.disabled = true;
+            button.nextElementSibling.disabled = false;
+            $("#recording").empty();
+        }
+
+        function stopRecording(button) {
+            recorder && recorder.stop();
+            button.disabled = true;
+            button.previousElementSibling.disabled = false;
+            __log('Stopped recording.');
+
+            // create WAV download link using audio data blob
+            createDownloadLink();
+
+            recorder.clear();
+        }
+
+        function createDownloadLink() {
+            recorder && recorder.exportWAV(function (blob) {
+                record_audio_file = blob;
+                var url = URL.createObjectURL(blob);
+                var au = document.createElement('audio');
+                var hf = document.createElement('a');
+
+                au.controls = true;
+                au.src = url;
+                hf.href = url;
+                hf.download = new Date().toISOString() + '.wav';
+                hf.innerHTML = hf.download;
+                recording.appendChild(au);
+                recording.appendChild(hf);
+            });
+        }
+
+        window.onload = function init() {
+            try {
+                // webkit shim
+                window.AudioContext = window.AudioContext || window.webkitAudioContext;
+                navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia;
+                window.URL = window.URL || window.webkitURL;
+
+                audio_context = new AudioContext;
+                __log('Audio context set up.');
+                __log('navigator.getUserMedia ' + (navigator.getUserMedia ? 'available.' : 'not present!'));
+            } catch (e) {
+                alert('No web audio support in this browser!');
+            }
+
+            navigator.getUserMedia({audio: true}, startUserMedia, function (e) {
+                __log('No live audio input: ' + e);
+            });
+        };
+
+        function submit ()
+        {
+            var formData = new FormData();
+            var userid = document.getElementById('userid').value;
+            console.log("userid is " + userid);
+            var uploadfile = undefined;
+            if (typeof(document.getElementById('upload').files[0]) != "undefined")
+            {
+                uploadfile = document.getElementById('upload').files[0];
+            }
+            else
+            {
+                if (typeof(record_audio_file) == "undefined")
+                {
+                    alert('no wav file');
+                    return;
+                }
+                uploadfile = record_audio_file;
+            }
+            var wav_name = new Date().toISOString() + '.wav';
+            formData.append('UserId', userid);
+            formData.append('UploadFile', uploadfile, wav_name);
+            for (var value of formData.values()) {
+               console.log(value);
+            }
+            $.ajax({
+                url: "register",
+                type: "HTTP",
+                method: "POST",
+                data: formData,
+                success:function(req) {
+                    alert(req);
+                },
+                error:function()
+                {
+                    alert("failed");
+                }
+            });
+        }
+    </script>
+
+</body>
 </html>
