--- a/sre/templates/register.html
+++ b/sre/templates/register.html
@@ -7,8 +7,8 @@
     <style type='text/css'>
         #recording audio { display: block; margin-bottom: 10px; }
     </style>
-    <script src="../static/js/recorder.js"></script>
-    <script src="../static/js/jquery-2.1.1.min.js"></script>
+    <script src="{{ static_url("js/Myrecorder.js") }}"></script>
+    <script src="{{ static_url("js/jquery-2.1.1.min.js") }}"></script>
 </head>
 <body>
     <div>
@@ -105,7 +105,6 @@
         {
             var formData = new FormData();
             var userid = document.getElementById('userid').value;
-            console.log("userid is " + userid);
             var uploadfile = undefined;
             if (typeof(document.getElementById('upload').files[0]) != "undefined")
             {
@@ -128,9 +127,12 @@
             }
             $.ajax({
                 url: "register",
-                type: "HTTP",
+                type: "HTTPS",
                 method: "POST",
                 data: formData,
+				contentType: false,
+				cache : false,
+				processData: false,
                 success:function(req) {
                     alert(req);
                 },
